--- a/sonar1.properties
+++ b/sonar1.properties
@@ -2,4 +2,4 @@ sonar.host.url=http://52.91.92.43:9000/
 sonar.projectKey=python
 sonar.java.binaries=target
 sonar.sources=.
-
+sonar.python.coverage.reportPaths=coverage.xml
