--- a/sonar1.properties
+++ b/sonar1.properties
@@ -1,5 +1,5 @@
 sonar.host.url=http://54.226.164.137:9000/
 sonar.projectKey=python
 sonar.sources=.
-sonar.python.coverage.reportPaths=**/coverage.xml
+sonar.python.coverage.reportPaths=../pytest-reports/coverage.xml
 sonar.language=py
